<resources>
    <string name="app_name">bloodBank</string>
    <string name="my_shopping_application">My Blood Bank Application</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to_the_terms_amp_condition"><![CDATA[I Agree To The Terms & Condition]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_an_account">create an account</string>
    <string name="reset_password">Reset Password</string>
    <string name="unmatch_password">Password does not match</string>
    <string name="enter_email_password">Please enter an email and a password</string>
    <string name="password_requirement">Password Requirement</string>
    <string name="minimum_password_length">Minimum password length is 6</string>
    <string name="invalid_mail">Invalid email address</string>


</resources>